lisa client db värskendamine, väiksed struktuurimuudatused