@@ -16,9 +16,10 @@ repositories {
 dependencies {
     implementation(project(":common"))
     // JavaFX dependencies for a modern desktop UI
-
+    implementation("com.google.code.gson:gson:2.10.1")
 }
 
 application {
     mainClass.set("oop.tegevusteplaneerija.client.MainClient")
+    applicationDefaultJvmArgs = listOf("--add-opens=java.base/java.time=ALL-UNNAMED")
 }
